tests/baselines/reference/parserMemberAccessOffOfGenericType1.errors.txt
parserMemberAccessOffOfGenericType1.ts(1,9): error TS2304: Cannot find name 'List'.
parserMemberAccessOffOfGenericType1.ts(1,13): error TS1477: An instantiation expression cannot be followed by a property access.


==== parserMemberAccessOffOfGenericType1.ts (2 errors) ====
    var v = List<number>.makeChild();
            ~~~~
!!! error TS2304: Cannot find name 'List'.
                ~~~~~~~~
!!! error TS1477: An instantiation expression cannot be followed by a property access.